# xflow

./: .gitignore  pyproject.toml
examples/: config.yaml
src/xflow/: __main__.py  base.py  cli.py  config.py  db.py  exceptions.py  flow.py  graph.py  main.py
src/xflow/features/: cook.py  eat.py  sport.py
src/xflow/stages/: __init__.py  breakfast.py  dinner.py  lunch.py
