[project]
name = "xflow"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "loguru>=0.7.2",
    "tinydb>=4.8.0",
    "pyyaml>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/xflow"]

[project.scripts]
xflow = "xflow.main:cli"
